--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://feralCat66.github.io/salud-front-end",
+  "homepage": "http://feralcat66.github.io/salud-front-end",
   "name": "salud-front-end",
   "version": "0.1.0",
   "private": true,
